# Aurora

./: .gitignore  AIR_IMPLEMENTATION_SUMMARY.md  AURORA_COMPILER_STATUS.md  BACKEND_IMPLEMENTATION.md  BLOCKING_ISSUES.md  CLAUDE.md  COMPILER_DRIVER_STATUS.md  Cargo.toml  EFFECTS_IMPLEMENTATION_COMPLETE.md  EXAMPLES_SHOWCASE.md  EXPECTED_OUTPUTS.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  MIR_IMPLEMENTATION_SUMMARY.md  NAMERES_IMPLEMENTATION.md  PARSER_COMPLETION_REPORT.md  PARSER_STATUS.md  PHASE1_PROGRESS.md  PROGRESS.md  README.md  ROADMAP_TO_PRODUCTION.md  SESSION_PROGRESS.md  SIMPLIFIED_SYNTAX_COMPLETE.md  SIMPLIFIED_SYNTAX_STATUS.md  SYNTAX_V2.md  TYPE_SYSTEM_EXAMPLES.md  TYPE_SYSTEM_IMPLEMENTATION.md  demo_backend.sh  final_fixes.sh  fix_literals.sh  fix_parser.sh  hello_world  hello_world.s  hello_world_complete  hello_world_complete.s  hello_world_gas.s  run_simulation.sh  (+9 more)
.claude/agents/: air.md  ast.md  autorepair.md  axir.md  backend.md  build.md  concurrency.md  diagnostics.md  documentation.md  effects-borrow.md  grammar.md  interop.md  lexer.md  mir.md  nameres.md  optimizer.md  orchestrator.md  parser.md  security.md  testing.md  typesystem.md
.github/workflows/: benchmarks.yml  ci.yml  sync-claude-to-main.yml
.specify/: README.md
.specify/memory/: checklist.md  constitution.md  plan.md  spec.md  tasks.md
benches/: README.md
crates/aurora_air/: Cargo.toml
crates/aurora_air/src/: air.rs  emit.rs  lib.rs  peephole.rs  regalloc.rs  schedule.rs
crates/aurora_air/tests/: air_tests.rs
crates/aurora_ast/: Cargo.toml  schema.json
crates/aurora_ast/examples/: export_schema.rs
crates/aurora_ast/src/: arena.rs  decl.rs  expr.rs  lib.rs  nodes.rs  pattern.rs  pretty.rs  span.rs  stmt.rs  ty.rs  visit.rs
crates/aurora_backend/: Cargo.toml
crates/aurora_backend/src/: lib.rs  link.rs  llvm.rs
crates/aurora_backend/tests/: integration_test.rs
crates/aurora_build/: Cargo.toml
crates/aurora_build/src/: cli.rs  lib.rs  workspace.rs
crates/aurora_concurrency/: Cargo.toml
crates/aurora_concurrency/src/: async_rt.rs  channels.rs  lib.rs  scheduler.rs
crates/aurora_diagnostics/: Cargo.toml
crates/aurora_diagnostics/src/: diagnostic.rs  effects_compat.rs  lib.rs  lsp.rs
crates/aurora_docs/: Cargo.toml
crates/aurora_docs/src/: generator.rs  lib.rs
crates/aurora_effects/: Cargo.toml  IMPLEMENTATION.md  README.md  SUMMARY.md
crates/aurora_effects/src/: arc.rs  borrow.rs  effects.rs  lib.rs  lifetimes.rs  strict.rs
crates/aurora_effects/tests/: integration_tests.rs
crates/aurora_grammar/: Cargo.toml  conflict_report.json  conflict_report.txt  grammar.json  precedence.json
crates/aurora_grammar/examples/: export_grammar.rs
crates/aurora_grammar/src/: conflicts.rs  grammar.rs  lib.rs  precedence.rs
crates/aurora_grammar/tests/: generate_exports.rs
crates/aurora_interop/: Cargo.toml
crates/aurora_interop/src/: c_abi.rs  header_gen.rs  lib.rs
crates/aurora_lexer/: Cargo.toml  token_catalog.json
crates/aurora_lexer/benches/: lexer_bench.rs
crates/aurora_lexer/src/: lexer.rs  lib.rs  nfa.rs  tokens.rs
crates/aurora_lexer/tests/: ambiguity.rs
crates/aurora_mir/: Cargo.toml  README.md
crates/aurora_mir/examples/: mir_demo.rs
crates/aurora_mir/src/: cfg.rs  dump.rs  lib.rs  lower.rs  lower_impl.rs  mir.rs  opt.rs
crates/aurora_mir/src/opt/: dce.rs  devirt.rs  gvn.rs  inline.rs  licm.rs  mod.rs  nrvo.rs  simd.rs  sroa.rs
crates/aurora_mir/tests/: mir_tests.rs
crates/aurora_nameres/: Cargo.toml  USAGE.md
crates/aurora_nameres/src/: hygiene.rs  lib.rs  modules.rs  resolver.rs  scopes.rs  symbols.rs
crates/aurora_nameres/tests/: integration_test.rs
crates/aurora_optimizer/: Cargo.toml
crates/aurora_optimizer/src/: lib.rs  perf_gate.rs  (+1 more)
crates/aurora_parser/: Cargo.toml  IMPLEMENTATION.md
crates/aurora_parser/src/: decls.rs  error.rs  exprs.rs  fix_tokens.sh  lib.rs  parser.rs  patterns.rs  stmts.rs  types.rs
crates/aurora_parser/tests/: comprehensive_test.rs  integration_test.rs
crates/aurora_security/: Cargo.toml
crates/aurora_testing/: Cargo.toml
crates/aurora_types/: Cargo.toml
crates/aurora_types/src/: exhaustive.rs  generics.rs  infer.rs  lib.rs  traits.rs  ty.rs  unify.rs
crates/aurorac/: Cargo.toml
crates/aurorac/src/: diagnostics.rs  driver.rs  lib.rs  main.rs  pipeline.rs  session.rs
docs/: PHASE0_COMPLETION.md  PHASE1_COMPLETION.md  README.md  architecture.md  ast_stability.md  compiler-internals.md  getting-started.md  grammar.bnf  grammar.md
examples/: README.md  complex_logic_simple.ax  control_flow.ax  enums.ax  factorial_simple.ax  fibonacci_simple.ax  fizzbuzz_simple.ax  functions.ax  hello_world.ax  hello_world_simple.ax  nested_conditions_simple.ax  operators_simple.ax  option_result.ax  prime_checker_simple.ax  string_operations_simple.ax  structs.ax  test_addition.ax  test_division.ax  test_if.ax  test_if_else.ax  test_let.ax  test_mixed_ops.ax  test_multiplication.ax  test_numbers.ax  test_return.ax  test_subtraction.ax  variables.ax
runtime/: Cargo.toml  c_runtime.c
runtime/src/: allocator.rs  lib.rs  panic.rs  start.rs
stdlib/: Cargo.toml  README.md
stdlib/src/: io.rs  lib.rs  option.rs  result.rs  string.rs
(+6 files in other folders)
