[package]
name = "aurora_lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-ident = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer_bench"
harness = false
