[package]
name = "aurora_mir"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora_ast = { path = "../aurora_ast" }
aurora_types = { path = "../aurora_types" }
aurora_effects = { path = "../aurora_effects" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
