[package]
name = "aurora_nameres"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Team"]
description = "Name resolution and scope analysis for Aurora"

[dependencies]
aurora_ast = { path = "../aurora_ast" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
